omxvideodec: EGLDisplay is not indirectly defined by gstgl headers inclusion

Just use gpointer as done in GstGL to not include
EGL/egl.h just for EGLDisplay.

https://bugzilla.gnome.org/show_bug.cgi?id=784779